<?xml version="1.0"?>
<package format="3">
  <name>ue_zenoh_bridge</name>
  <version>0.1.0</version>
  <description>Bridge UE zenoh CDR payloads to ROS 2 serialized messages.</description>
  <maintainer email="user@example.com">ue_zenoh_bridge maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>robots_dog_msgs</depend>
  <depend>zenoh_cpp_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
